# Basic-Compiler

./: .gitignore  CMakeLists.txt  README.md  remove-commits-for-README.md-and-this-script.sh
docs/: ANSI-C-grammar-l.html
src/: main.cpp
src/ast/: ast.cpp  ast.h  context.cpp  context.h  declaration.cpp  declaration.h  declarator.cpp  declarator.h  expression.cpp  expression.h  gen-ctx.cpp  gen-ctx.h  statement.cpp  statement.h  type.cpp  type.h
src/syntax/: lexical.l  syntax.y
src/tests/: calc.c  kmp.c  palindromic.c  test.c  tests.c
tests/: palindromic.c  tests.c
